# CPP_rtype_2019

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.py  conanfile.txt  shell.nix
client/: CMakeLists.txt
client/assets/: background.pfi  button.pfi  cross.pfi  play.pfi  tick.pfi
client/src/: GameSprite.cpp  GameSprite.hpp  Menu.cpp  Menu.hpp  main.cpp
client/src/Component/: Button.cpp  Button.hpp  CommonComponent.hpp  Entity.cpp  Entity.hpp  Fading.cpp  Fading.hpp  IComponent.hpp  Image.cpp  Image.hpp  Loader.cpp  Loader.hpp  Ship.cpp  Ship.hpp  SideScroller.cpp  SideScroller.hpp  SpriteSheet.cpp  SpriteSheet.hpp
client/src/Game/: GameSprite.cpp  GameSprite.hpp  KeyBind.cpp  KeyBind.hpp  Window.cpp  Window.hpp
client/src/Network/: Buffer.hpp  INetwork.hpp  Network.cpp  Network.hpp  Packet.cpp  Packet.hpp  sfNetwork.cpp  sfNetwork.hpp
client/src/Scene/: Game.cpp  Game.hpp  IScene.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  OptionsMenu.cpp  OptionsMenu.hpp  PlayMenu.cpp  PlayMenu.hpp
client/src/Scene/Menu/: CommonMenu.hpp  MainMenu.cpp  MainMenu.hpp  OnlineMenu.cpp  OnlineMenu.hpp  OptionsMenu.cpp  OptionsMenu.hpp  PlayMenu.cpp  PlayMenu.hpp
client/tests/: CMakeLists.txt
server/: CMakeLists.txt
server/monster_libraries/: CMakeLists.txt
server/monster_libraries/src/: AMonster.hpp  RandomMonster.cpp  RandomMonster.hpp
server/src/: main.cpp
server/src/engine/: ComponentPool.hpp  LobbyCommunication.cpp  LobbyCommunication.hpp  ObjectPool.hpp  SafeQueue.hpp  SystemThreadPool.hpp
server/src/engine/component/: CBulletType.hpp  CCollisionDamage.hpp  CCommand.hpp  CConnection.hpp  CCooldown.hpp  CDirection.hpp  CGun.hpp  CHealth.hpp  CId.hpp  CInput.hpp  CMoveType.hpp  CNetwork.hpp  CShootingAI.hpp  CSpeed.hpp  CTransform.hpp  CType.hpp  ComponentList.hpp  ConnectionComponent.hpp  DirectionComponent.hpp  HealthComponent.hpp  IComponent.hpp  IdComponent.hpp  NetworkComponent.hpp  TransformComponent.hpp  TypeComponent.hpp
server/src/engine/entity/: DestoryEntity.cpp  DestroyEntity.cpp  DestroyEntity.hpp  Entity.hpp  EntityAdmin.cpp  EntityAdmin.hpp  EntityFactory.cpp  EntityFactory.hpp  EntityManager.cpp  EntityManager.hpp  EntityUtil.hpp  GetPool.hpp  IEntity.hpp  Id.hpp  PlayerEntity.hpp
server/src/engine/mathUtils/: Vector2.hpp
server/src/engine/protocol/: ReceiveProtocol.cpp  ReceiveProtocol.hpp  SendProtocol.cpp  SendProtocol.hpp  TypeProtocol.cpp  TypeProtocol.hpp
server/src/engine/system/: ASystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  CommandDirectionSystem.cpp  CommandDirectionSystem.hpp  ConnectionSystem.cpp  ConnectionSystem.hpp  CreationBulletSystem.cpp  CreationBulletSystem.hpp  DestroyOOBSystem.cpp  DestroyOOBSystem.hpp  DirectionUpdateSystem.cpp  DirectionUpdateSystem.hpp  DynamicLoadMonsterSystem.cpp  HandleConnectionSystem.cpp  HandleConnectionSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  InputDirectionSystem.cpp  InputDirectionSystem.hpp  MonsterSpawningSystem.cpp  MonsterSpawningSystem.hpp  MoveSystem.cpp  MoveSystem.hpp  ShootSystem.cpp  ShootSystem.hpp  ShootingAISystem.cpp  ShootingAISystem.hpp  SystemUtil.cpp  SystemUtil.hpp  TransformSystem.cpp  (+3 more)
server/src/monster_libraries/: BasicMonster.cpp  BasicMonster.hpp  RandomMonster.cpp  RandomMonster.hpp
server/src/network/: Connection.hpp  Network.hpp
server/tests/: CMakeLists.txt
server/tests/src/: ComponentPoolTest.cpp  ConnectedClientsTest.cpp  EntityManagerTest.cpp  ObjectPoolTest.cpp
(+59 files in other folders)
